# bigdata-processing-scylla-and-rust

./: docker-compose.yml  readme.md
analyzer/: Cargo.toml  Dockerfile
analyzer/src/: main.rs
processor/: Cargo.toml  Dockerfile
processor/src/: main.rs
producer/: Cargo.toml  Dockerfile
producer/src/: main.rs
