[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scylla = "0.9.0"
tokio = { version = "1.12", features =["full"]}
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.14" , features = ["env-filter"] }
